Laying groundwork to glue the mozilla downloader into the codebase